--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
+    "material-icons": "^1.13.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.26.2"
+    "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
+    "redux": "^5.0.1",
+    "redux-toolkit": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
